Data ke tampilan

--- a/public/main.css
+++ b/public/main.css
@@ -11,13 +11,13 @@
 
 /* Handle */
 .custom-scrollbar::-webkit-scrollbar-thumb {
-    background: rgba(255, 107, 24, 1);
+    background: rgba(0,156,75,255);
     border-radius: 3px;
 }
 
 /* Handle on hover */
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background: rgba(255, 107, 24, 1); 
+    background: rgba(0,156,75,255); 
 }
 
 #Content-wrapper{
@@ -68,11 +68,11 @@
 }
 
 #Content-wrapper ins{
-    color: #FF6B18;
+    color: #009c4b;
 }
 
 #Content-wrapper a{
-    color: #FF6B18;
+    color: #009c4b;
 }
 
 #Content-wrapper a:hover{
